2019-06-14  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el (w3m-session-select-delete): Advance to next session
	group element after delete, not previous. Handle case of final entry of
	session group being deleted.
	(w3m-session-delete): Deleting final element of a session removes the
	session entry itself, and returns to the parent page (ie. the list of
	sessions, not the list of session elements).
	(w3m-session-save): Remove catch/throw idiom
	(w3m-session-select-copy): New feaure.
	(w3m-session-select-mode-map): Bind new feature to 'c' and 'C'.
	(w3m-session-select-quit): Properly position point upon completion.

2019-06-13  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-goto-url): bugfixes for local file urls: parse
	environment variables in the pathname, honor docstring for
	w3m-local-find-file-regexps.
	(w3m-goto-url-new-session): bugfix for local file urls: don't hide
	buffer after creating it.

	* w3m-util.el (w3m-strip-queries): Add defcustom option to easily
	toggle the feature.
	(w3m--url-strip-queries): Use the defcustom.

2019-06-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--retrieve-and-render--handler-function): Test if parens
	in format string is messing up occassional w3m--message calls.
	(w3m--message): Ensure args is of type list.
	(w3m--goto-url--valid-url): Use new feature w3m--url-strip-queries.

	* w3m-util.el (w3m-generate-new-buffer): Remove commented code of buggy
	commit 50051242efa5c08d16c4b, Add sanity checks for buffer name, Use
	buggy commit idea to reduce nested let's.
	(w3m--url-strip-queries): New feature: Strip unwanted trackers from
	urls.
	(w3m-strip-queries-alist): Defcustom in support of the new feature.

2019-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-select-buffer-show-this-line)
	(w3m-select-buffer-next-line): Keep the column position in the
	selection window when moving up or down ([emacs-w3m:13440]).

	* w3m-util.el (w3m-generate-new-buffer):